--- a/index.html
+++ b/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
-    
+    <header>
+      <h1>Tic-Tac-Toe</h1>
+      <h2 id="status">hello</h2>
+    </header>
+    <section class="gameboard">
+      <div class="squares">
+        <div class="square" data-index="0"></div>
+        <div class="square" data-index="1"></div>
+        <div class="square" data-index="2"></div>
+        <div class="square" data-index="3"></div>
+        <div class="square" data-index="4"></div>
+        <div class="square" data-index="5"></div>
+        <div class="square" data-index="6"></div>
+        <div class="square" data-index="7"></div>
+        <div class="square" data-index="8"></div>
+      </div>
+    </section>
+    <div class="controls">
+      <button id="reset-btn">Restart</button>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
